@@ -1,3 +1,12 @@
+2001-01-26  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* Recipe.pm (execute): Add status check on return. Print message
+	when monolith is bad
+
+	* Inst/Defn.pm: @DIRS_TO_UNLINK has to be updated in the BEGIN
+	block else the dir is not removed if oracdr fails to get past all
+	the loading.
+
 2001-01-19  Timothy Jenness  <t.jenness@jach.hawaii.edu>
 
 	* Display/KAPVIEW.pm (engine_launch_object): Fix typo in method name
